# whole-body-rl-reaching

./: .gitignore  LICENSE  eval.py  pyproject.toml  readme.txt  render_debug.py  render_video.py  train.py
assets/: robot.xml
configs/: curriculum.yaml  ppo.yaml
envs/: mujoco_env.py  rewards.py
